test-resources/invalid-project/src/main/java/test/group/id/LTR.java
package test.group.id;

/**
 * ‪
 * Bidi characters above
 */
public class LTR
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
